2020-07-25
- Add optional print direction ascending or descending to output of statistics -s and oredered printing -O. Request #235
- Fix issue #234 

2020-06-20
- Honor -n flag when printing sorted flow cache
- Fix uninitialized variable printPlain
- Fix bug #223 limit matchig flows -c
- Restore old behaviour unlimiting output flows unless in -s stat
- Fix ft2nfdump nexthop fields
- Fix ft2nfdump extension map size
- internal: put output parameters in a single struct
- Fix GuessDir bug - issue #215
- Compact Changelog
- Fix GuessDir bug - issue #215 in flow exporter

2020-03-29
- Release 1.6.20
- More cleanup on plain number printing
- Fix plain numbers bug #213
- Fix profiler filer bug

2020-02-22
- Release 1.6.19
- Add Source security group tag (SGT 34000) issue #192
- Modify heuristic for bidir flows #59
- Add Push for new sgt tag.
- Cleanup unused nffile records. Add nffileV2.h
- Fix various compiler warnings and automake issues
- Remove external global vars
- Set verbose logging off by default in non daemon mode
- Fix make check
- Remove old legacy records
- Major code rearrangement in order to prepare for futur versions of nfdump
  Move extension definitions into extension files nfx.h
  Move exporter definition into extension.h
  nffile.h should only contain nffile data block handlich definitions
- Fix compile error for FreeBSD #203
- Cleanup header code - add new filter.h - free nfdump.h from dust
- More code cleanup - delete nf_common - add output_fmt
- Fix bug for IPv6 network cidr representation in raw and cvs output mode.
- Remove unused old code. Fix for #197
- Fix bidir export issues. Cleanup code. Fix for #195
- Enable small time intervals < 60s. - #185
- Cleanup old code
- Fix minor nfpcapd issues
- Fix gcc compile issue
- Fix corrupt file handling #193
- More code cleanup. Move code to dedicated files.
- Restructure code for output into separate files.
- Cleanup old code.
- Fix bug #189 - valid json output